app/assets/stylesheets/vertical.scss
/**
 * Consists of general styles for the verticals (software, datasets, analyses,
 * and projects).
 *
 * Created by hfeild on 06-Apr-2017.
 */

.added.index-entry {
    background-color: #d9e8d9;
}

.index-entry {
  display: block;  
  min-height: 3em;
  width: 100%;
  margin-bottom: 1em;
  padding: 1em .5em 1em .5em;
  border: 1px solid gray;

  &:hover {
    text-decoration: none;
  }

  &:active {
    text-decoration: none;
  }

  .name {
    font-size: 150%;
    font-weight: bold;
    display: block;
  }

  .metadata {
    display: block;
    color: #888;
  }

  .author {
    font-weight: bold;
    color: #555;
  }
  .instructor {

  }
  .course {
    font-weight: bold;
    color: #555;
  }

  .date {
  }

  .snippet {
  }

  .summary {
    display: block;
    margin-top: 5px;
    margin-bottom: 5px;
  }
}

li .snippet {
  color: #555;
}

.metadata {
  td, th {
    padding-right: 2em;
  }
}

.tags {
  margin-bottom: 1em;
  margin-top: 1em;
}

.tag-badge {
  font-size: 85%;
  border-radius: 2em;
  background-color: lighten($brand-primary, 0%);
  display: inline-block;
  padding-left: .5em;
  padding-right: .5em;
  color: white;
  a, a:active, a:hover, a:visited {
    color: white;
  }
  
  .edit:hover, .delete:hover {
    color: #ccc;
  }
}

span.tag-title, span.summary-title {
  font-weight: bold;
}

li.assignment-list-item {
  margin-top: 0;
  margin-bottom: 0em;
}

.assignment-list-item.selected {
  // color: orange;
  color: #555;
}

.no-data {
  color: #aaa;
  font-style: italic;
}

table.metadata {
  margin-top: 1em;
}

div.entries {
  margin-top: 1em;
}

.file-attachment-wrapper {
  display: inline-block;
  vertical-align: middle;
}

.attachment-form-wrapper {
  td {
    padding-right: 1em;
  }
  h3 {
    margin-top: 0;
  }

  margin-bottom: .5em;
  border: 1px solid gray;
  padding: .5em;
}

.grip {
  vertical-align: middle;
  transform: scale(1.5, 1.5);
  margin-top: -.5em;
  cursor: grab; 
}

.file-attachment {
  margin-bottom: .5em;
}

.dragging {
  // border: 2px solid steelblue;
  // border-radius: 10px;
  // padding: .5em;
  // box-shadow: 1px 1px 1px 1px #aaa;
  // background: white;
  // height: 3.5em !important;
  // vertical-align: middle;
  // //display: block;
  // box-sizing: border-box;
  background: #eee;
  border: 1px solid #aaa;
}

.vertical-banner {
  font-size: 175%;
  color: #555;
  font-style: italic;
  margin-top: -.5em;
  padding-top: 0;
  display: block;
}

.edit-toggle {
  display: none;
}
ul {
	padding-inline-start: 0;
	padding: 0;
}

.file-attachments-list li {
  list-style: none;
}

ul.authors, ul.instructors {
  margin-left: 1.5em;
}

.ui-autocomplete li {
  list-style: none;
}

#picked-users {
  display: inline-block;

  .user {
    margin-right: .5em;
    padding: .5em;
    cursor: pointer;
    user-select: none;
  
    background: $brand-primary;
    color: white;
  
    .remove-user {
      margin-left: .5em;
      :hover {
        color: $brand-danger;
      }
    }
  
    border-radius: 3px;
  }
}

.assignment_group-grouping {
  padding: .5em;
  border: 1px solid gray;
  border-radius: 5px;
  padding-bottom: 0;
  margin-bottom: 2em;

  .name {
    font-size: 150%;
    display: block;
    font-weight: bold;
    margin-bottom: .1em;
  }

  .summary {
    display: block;
    margin-bottom: .5em;
  }


}

.assignment_group.index-entry {
  .assignments-list {
    padding-left: 1em;
    margin-bottom: .5em;
  }
}

.ui-helper-hidden-accessible {
  display: none;
}

#user-search {
  width: 300px;
}

